deploy/kube2/deploy-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flotsam-auth
  labels:
    app: flotsam-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flotsam-auth
  template:
    metadata:
      labels:
        app: flotsam-auth
    spec:
      containers:
      - name: flotsam-auth
        image: rg.fr-par.scw.cloud/namespace-flotsam/flotsam-auth:898a0c9
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3333
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: flotsam-auth
spec:
  selector:
    app: flotsam-auth
  ports:
    - port: 3333
