deploy/kube2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: test.49087273-8296-46cc-a82c-f08cb9623ce2.nodes.k8s.fr-par.scw.cloud
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: flotsam-auth
                port:
                  number: 3333
